css/default.css
/**********************************
 * General settings
 **********/

body {
    width: 600px;
    margin: 0px auto 0px auto;
    font-family: Georgia;
}

a:link {
    color: #0008a0;
}

a:visited {
    color: #6d70a0;
}

a:hover,
a:active {
    color: #0008a0;
}


/**********************************
 * Blog header
 */

#blog-header {
    text-align: center;
    font-size: small;
    margin: 0 auto;
}

#blog-header h1 {
    font-size: 4em;   
    margin: 0;
    text-transform: uppercase;
}

#blog-header h2 {
    margin-top: 0;
}

a:link#blog-header-link,
a:visited#blog-header-link,
a:hover#blog-header-link,
a:active#blog-header-link 
{
    color: #0008a0;
    text-decoration: none;
}

#blog-header-logo {
    float: left;
}

#blog-header-title {
    float: right;
    text-align: right;
}

/**********************************
 * Navigation bar
 */

nav#navigation {
    text-align: center;
    border-top: 1px solid #b0b0b0;
    border-bottom: 1px solid #b0b0b0;
    padding: 4px 0px 4px 0px;
}

nav#navigation a {
    text-decoration: none;
    text-transform: uppercase;
    padding: 3px 10px 3px 10px;
    margin: 0px 10px 0px 10px;
}

nav#navigation a:link,
nav#navigation a:visited,
nav#navigation a:hover,
nav#navigation a:active {
    color: black;
}

/**********************************
 * Post
 */

#post-header {
    padding-bottom: 0.3em;
}

#post-header h1 {
    font-size: 2em;
    border-bottom: 1px dashed #b0b0b0;
    margin-bottom: 0.2em;
    padding-bottom: 0.2em;
}

#post h2 {
    font-size: 95%;
}

#post {
    line-height: 1.467em;
}

#post hr {
    height: 1px;
    border: 0 none;
    color: #b0b0b0;
    background-color: #b0b0b0;
}

#post-date {
    font-size: 0.8em;
    text-align: right;
}

/**********************************
 * Footer
 */

footer#blog-footer {
    border-top: 1px solid #b0b0b0;
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 0.8em;
    text-align: center;
}

/**********************************
 * Miscellaneous
 */

.image {
    text-align: center;
    margin: 0 auto;
}

.center {
    text-align: center;
}

#service-page h1 {
    text-align: center;
    width: 90%;
    padding-bottom: 0;
    margin-left: auto;
    margin-right: auto;
}

#service-page p {
    line-height: 1.467em;
}

code {
    font-size: 0.8em;
    background-color: #f5f5f5;
    margin: 0 0.2em;
}

pre {
    background-color: #f5f5f5;
    padding: 0 0.3em;
    border-left: 2px solid #a5a5a5;
}

pre code {
    margin: 0;
}

blockquote {
    border-left: 4px solid #a5a5a5;
    padding-left: 1em;
    margin-right: 0;
    margin-left: 0;
}

